[gd_scene load_steps=2 format=3 uid="uid://b17kffupxhkqr"]

[ext_resource type="Script" path="res://scripts/create_player.gd" id="1_5rn7m"]

[node name="CreatePlayer" type="Node2D"]
script = ExtResource("1_5rn7m")

[node name="Panel" type="Panel" parent="."]
offset_right = 438.0
offset_bottom = 180.0

[node name="NameLabel" type="Label" parent="Panel"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
offset_left = 35.0
offset_top = 27.0
offset_right = 116.0
offset_bottom = 65.0
text = "Name:"
vertical_alignment = 1

[node name="NameLine" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 168.0
offset_top = 30.0
offset_right = 423.0
offset_bottom = 61.0
placeholder_text = "...."
alignment = 1

[node name="PlayerSelectLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 36.0
offset_top = 75.0
offset_right = 139.0
offset_bottom = 140.0
text = "Select Player:"
vertical_alignment = 1

[node name="AvatarContainer" type="GridContainer" parent="Panel"]
clip_contents = true
layout_mode = 0
offset_left = 167.0
offset_top = 88.0
offset_right = 364.0
offset_bottom = 167.0
columns = 4

[node name="LockButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 370.0
offset_top = 103.0
offset_right = 430.0
offset_bottom = 154.0
text = "Lock"

[connection signal="pressed" from="Panel/LockButton" to="." method="_on_lock_button_pressed"]
